Changes from work machine. vim configuration, Powerline config added

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,10 +1,12 @@
+POWERLINE_DIR=${HOME}/.local/powerline/powerline
+
 # https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
 set-option -g status-bg colour235 #base02
 set-option -g status-fg colour136 #yellow
 set-option -g status-attr default
 
 set -ga terminal-overrides ',xterm*:smcup@:rmcup@'
-set -g mouse on
+set -g mouse off
 
 # set window split
 bind-key v split-window -h
@@ -109,4 +111,5 @@ if-shell "#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$
 if-shell "#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)" "unbind '\"'; bind '\"' split-window -v -c '#{pane_current_path}'"
 if-shell "#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)" 'unbind v; bind v split-window -h -c "#{pane_current_path}"'
 if-shell "#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)" 'unbind %; bind % split-window -h -c "#{pane_current_path}"'
-if-shell 'test -f /usr/share/powerline/bindings/tmux/powerline.conf' 'source-file /usr/share/powerline/bindings/tmux/powerline.conf'
+run-shell "powerline-daemon -q"
+if-shell 'test -f "${POWERLINE_DIR}/bindings/tmux/powerline.conf"' 'source-file "${POWERLINE_DIR}/bindings/tmux/powerline.conf"'
